# hyprpaper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  flake.nix
.github/workflows/: nix-build.yaml
nix/: default.nix  hm-module.nix  overlays.nix
src/: Hyprpaper.cpp  Hyprpaper.hpp  defines.hpp  includes.hpp  main.cpp
src/config/: ConfigManager.cpp  ConfigManager.hpp  WallpaperMatcher.cpp  WallpaperMatcher.hpp
src/debug/: Log.cpp  Log.hpp
src/events/: Events.cpp  Events.hpp
src/helpers/: Bmp.cpp  Bmp.hpp  GlobalState.hpp  ImagePicker.cpp  ImagePicker.hpp  Jpeg.cpp  Jpeg.hpp  JpegXL.cpp  JpegXL.hpp  Logger.hpp  Memory.hpp  MiscFunctions.cpp  MiscFunctions.hpp  Monitor.cpp  Monitor.hpp  PoolBuffer.hpp  RandomGenerator.hpp  System.cpp  System.hpp  Vector2D.cpp  Vector2D.hpp  Webp.cpp  Webp.hpp
src/ipc/: HyprlandSocket.cpp  HyprlandSocket.hpp  IPC.cpp  IPC.hpp  Socket.cpp  Socket.hpp  Tavern.cpp  Tavern.hpp
src/render/: Buffer.cpp  Buffer.hpp  Egl.cpp  Egl.hpp  LayerSurface.cpp  LayerSurface.hpp  Math.cpp  Math.hpp  Renderer.cpp  Renderer.hpp  WallpaperTarget.cpp  WallpaperTarget.hpp  WallpaperTransform.hpp
src/ui/: UI.cpp  UI.hpp
systemd/: hyprpaper.service.in
